--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <!-- social icons -->
         <ul class="social-icons">
-            <li> <a href="https://github.com/Ibrah47c" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+            <li> <a href="https://github.com/Nthenge" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             <li> <a href="https://www.linkedin.com/in/47made" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
             <li> <a href="https://twitter.com/Abraham47c?t=VLibWXokv2bDeKPzB-VUvA&s=09" target="_blank"> <i class="fa-brands fa-twitter-square"></i></a></li>
         </ul>
