changed to .html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <aside class="aside">
     <div class="aside-wrapper">
         <div class="logo-section">
-            <a class="logo" rel="home" href="index.php" id="a">
+            <a class="logo" rel="home" href="index.html" id="a">
                 <span id="f-A">A</span>
                 <span id="a">Abraham</span>
             </a>
@@ -38,11 +38,11 @@
         </div>
         <div id = "navlinks">
             <nav class="nav-links">
-                <a href="index.php#skills">About</a>
-                <a href="index.php#skill-section">My Skills</a>
-                <a href="index.php#section-potfolio">Work</a>
-                <a href="index.php#section-blog">Blog</a>
-                <a href="index.php#contactMe">Contact</a>
+                <a href="index.html#skills">About</a>
+                <a href="index.html#skill-section">My Skills</a>
+                <a href="index.html#section-potfolio">Work</a>
+                <a href="index.html#section-blog">Blog</a>
+                <a href="index.html#contactMe">Contact</a>
             </nav>
         </div>
         <!-- social icons -->
@@ -78,7 +78,7 @@
                 <span class="hi">W</span><span class="hi">e</span><span class="hi">b</span> <span class="hi">D</span><span class="hi">e</span><span class="hi">v</span><span class="hi">e</span><span class="hi">l</span><span class="hi">o</span><span class="hi">p</span><span class="hi">e</span><span class="hi">r</span><span class="hi">.</span>
             </span>
             <div class="front">Front End Developer / Java & Python Expert</div>
-            <button class="contact-btn"> <a href="index.php#contactMe">Contact me!</a></button>
+            <button class="contact-btn"> <a href="index.html#contactMe">Contact me!</a></button>
         </div>
     </section>
 </div> 
@@ -103,7 +103,7 @@
             <span>
                 <span>
                     A small gallery of recent projects chosen by me. I've done them all together with amazing people from companies around the globe. It's only a drop in the ocean compared to the entire list.
-                    Interested to see some more? Visit my <a href="index.html#section-potfolio" class="work-link">work page</a>.
+                    Interested to see some more? Visit my <a href="index.#section-potfolio" class="work-link">work page</a>.
                 </span>
             </span>
                 <button class="my_see_more-btn">See more!</button>
