--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <script src="https://kit.fontawesome.com/9b30c6d276.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abrahamic</title>
+    <title>Abraham Mutinda</title>
 </head>
 <body>
 <div id="abraham_front">
