--- a/test.html
+++ b/test.html
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
 <html>
+    <script src="https://kit.fontawesome.com/9b30c6d276.js" crossorigin="anonymous"></script>
+    <style>
+        .comment--section{
+            display: flex;
+            justify-content:space-between;
+            align-items: center;
+            max-width: 160px;
+        }
+        .comment--section--span{
+            justify-content: space-around;
+        }
+        #heart, #message, #share {
+            font-size: 10px;
+            cursor: pointer;
+        }
+        #heart:hover, #message:hover, #share:hover{
+        transition: all 0.25s;
+        transform: scale(2.14);
+        -ms-transform: scale(1.4);
+        -webkit-transform: scale(1.14);
+    }
+    </style>
 <head>
     <title>Simple Table</title>
 </head>
 <body>
-    <table border="1">
-        <thead>
-            <tr>
-                <th colspan="3">Table Header</th>
-            </tr>
-            <tr>
-                <th>Header 1</th>
-                <th>Header 2</th>
-                <th>Header 3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Row 1, Cell 1</td>
-                <td>Row 1, Cell 2</td>
-                <td>Row 1, Cell 3</td>
-            </tr>
-            <tr>
-                <td>Row 2, Cell 1</td>
-                <td>Row 2, Cell 2</td>
-                <td>Row 2, Cell 3</td>
-            </tr>
-            <tr>
-                <td>Row 3, Cell 1</td>
-                <td>Row 3, Cell 2</td>
-                <td>Row 3, Cell 3</td>
-            </tr>
-        </tbody>
-    </table>
+   <div class="comment--section">
+
+    <span class="comment--section--span">
+        <i class="fa-solid fa-heart" id="heart">Heart</i>
+        <span id="heart--span">0</span>
+    </span>
+
+    <span class="comment--section--span">
+        <span><i class="fa-regular fa-comments" id="message">Message</i></span>
+        <span id = "message--span">0</span>
+    </span>
+
+    <span class="comment--section--span" id="share">   
+        <span><i class="fa-solid fa-share"></i> share</span>
+        <span>3</span>
+    </span>
+
+   </div>
+
+   <div id="inputArea" style="display: none;">
+    <input type="text" id="messageInput" placeholder="Enter your message" />
+    <button id="sendButton">Send</button>
+  </div>
+  
+   <script src="./test.js"></script>
 </body>
 </html>
