Added a link to work links

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p1.jpg" alt="image" >
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="https://marvelous-madeleine-e6e7cf.netlify.app/" class="colorbox"></a>
                     </div>
                 </li>
                 <!-- magical wall two -->
