Added target in work section

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p1.jpg" alt="image" >
                         <div class="hover-content"></div>
-                        <a href="https://marvelous-madeleine-e6e7cf.netlify.app/" class="colorbox"></a>
+                        <a href="https://marvelous-madeleine-e6e7cf.netlify.app/" class="colorbox" target="_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall two -->
@@ -254,7 +254,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p2.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall three -->
@@ -262,7 +262,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p3.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall four -->
@@ -270,7 +270,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p4.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall five -->
@@ -278,7 +278,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p5.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall six -->
@@ -286,7 +286,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p6.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall seven -->
@@ -294,7 +294,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p7.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall eight -->
@@ -302,7 +302,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p8.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall nine -->
@@ -310,7 +310,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p9.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox"></a>
+                        <a href="#" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
             </ul>
