--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p2.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox" target = "_blank"></a>
+                        <a href="https://elaborate-blancmange-bdba22.netlify.app/" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall three -->
@@ -262,7 +262,7 @@
                     <div class="magic-wall_item" lazyload>
                         <img src="p3.jpg" alt="image">
                         <div class="hover-content"></div>
-                        <a href="#" class="colorbox" target = "_blank"></a>
+                        <a href="https://sparkling-cajeta-161095.netlify.app/" class="colorbox" target = "_blank"></a>
                     </div>
                 </li>
                 <!-- magical wall four -->
